# Gerdism-Wallet

./: README.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/gerdism/gerdism_wallet/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
wallet-core/: .gitignore  Cargo.toml
wallet-core/src/: error.rs  lib.rs
wallet-core/src/api/: api.rs
wallet-core/src/chains/: mod.rs
wallet-core/src/chains/ethereum/: mod.rs
wallet-core/src/chains/evm/: address.rs  mod.rs  signer.rs
wallet-core/src/crypto/: key_derive.rs  mnemonic.rs  mod.rs  paths.rs
wallet-core/src/crypto/key_deriver/: ed25519.rs  mod.rs  secp256k1.rs
wallet-core/src/network/: mod.rs  models.rs  traits.rs
