[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"

bip39 = "2.0"
alloy = { version = "0.1", features = ["full"] }
rand = { version = "0.8", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"

zeroize = { version = "1.7", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

bip32 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = { version = "2.1", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"

tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rlp = "0.6.1"
secrecy = "0.10.3"



[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
